# meal-planner

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
Meals/: 01_Sheet_Pan_Chicken_Fajitas.md  02_Cheesy_Chicken_Broccoli_Rice_Bake.md  03_Crispy_Chicken_Parmesan.md  04_Mediterranean_Chicken_Wraps.md  05_Ranch_Chicken_Sheet_Pan_Bake.md  06_Chicken_Alfredo_Pasta.md  06_Southwest_Bowl.md  07_Lemon_Herb_Chicken_Roast.md  08_Chicken_Pesto_Pasta.md  09_Chicken_Fried_Cauliflower_Rice.md  100_Chicken_Handi.md  101_Chicken_Karaage.md  102_Chicken_Marengo.md  103_Chicken_Parmentier.md  104_Chicken_Quinoa_Greek_Salad.md  105_Chicken_Shawarma_with_homemade_garlic_herb_yoghurt_sauce.md  106_Chicken_wings_with_cumin_lemon_garlic.md  107_Chickpea_Fajitas.md  108_Chickpea_chorizo_spinach_stew.md  109_Chilli_prawn_linguine.md  10_Orange_Chile_Glazed_Chicken.md  110_Chinese_Orange_Chicken.md  111_Chinese_Tomato_Egg_Stir_Fry.md  112_Clam_chowder.md  113_Coq_au_vin.md  114_Corned_Beef_and_Cabbage.md  115_Corned_Beef_Hash.md  116_Creamy_Tomato_Soup.md  117_Crispy_Eggplant.md  118_Crispy_Sausages_and_Greens.md  119_Crock_Pot_Chicken_Baked_Tacos.md  11_One_Pan_Chicken_Veggie_Stir_Fry.md  120_Cumberland_Pie.md  121_Dal_fry.md  122_Drunken_noodles_pad_kee_mao.md  123_Duck_Confit.md  124_Easy_Spanish_chicken.md  125_Egg_Drop_Soup.md  126_Egg_Foo_Young.md  127_Empanadas.md  (+233 more)
data/: backfill_defaults_log.json  backfill_log.json  meals.db  recipe_urls.json
examples/: pantry.yaml  preferences.yaml
pages/: 0_setup.py  1_recipes.py  (+6 more)
(+29 files in other folders)
